--- a/static/css/_color.scss
+++ b/static/css/_color.scss
@@ -3,9 +3,8 @@ $ck1: rgba(0,0,0,0.87);
 $ck2: rgba(0,0,0,0.54);
 $ck3: rgba(0,0,0,0.26);
 $ck4: rgba(0,0,0,0.12);
+$ckb: #fafafa;
 
-.strawman {
-	&.light {
-		color: $ck1;
-	}
-}
+$cb: #7699d4;
+$cg: #4ecdc4;
+$cr: #ff6b6b;
