--- a/static/css/_type.scss
+++ b/static/css/_type.scss
@@ -26,14 +26,17 @@
 	.d0 {
 		font-size: 34px;
 		line-height: 47px;
+		font-weight: 400;
 	}
 
 	.d1 {
 		font-size: 20px;
 		line-height: 28px;
+		font-weight: 400;
 	}
 	.d2 {
 		font-size: 15px;
 		line-height: 21px;
+		font-weight: 400;
 	}
 }
