--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -5,5 +5,5 @@
 
 @import "../bower_components/normalize-scss/_normalize";
 @import "type";
-@import "theme";
+@import "color";
 @import "components";
