--- a/static/css/main.css
+++ b/static/css/main.css
@@ -433,19 +433,18 @@ th {
   /* line 26, /Users/imogen/git/strawmang/static/css/_type.scss */
   .strawman .d0 {
     font-size: 34px;
-    line-height: 47px; }
-  /* line 31, /Users/imogen/git/strawmang/static/css/_type.scss */
+    line-height: 47px;
+    font-weight: 400; }
+  /* line 32, /Users/imogen/git/strawmang/static/css/_type.scss */
   .strawman .d1 {
     font-size: 20px;
-    line-height: 28px; }
-  /* line 35, /Users/imogen/git/strawmang/static/css/_type.scss */
+    line-height: 28px;
+    font-weight: 400; }
+  /* line 37, /Users/imogen/git/strawmang/static/css/_type.scss */
   .strawman .d2 {
     font-size: 15px;
-    line-height: 21px; }
-
-/* line 8, /Users/imogen/git/strawmang/static/css/_theme.scss */
-.strawman.light {
-  color: rgba(0, 0, 0, 0.87); }
+    line-height: 21px;
+    font-weight: 400; }
 
 /* line 1, /Users/imogen/git/strawmang/static/css/_components.scss */
 html {
@@ -548,28 +547,31 @@ html {
     -moz-flex-direction: column;
     flex-direction: column;
     -ms-flex-direction: column; }
-    /* line 27, /Users/imogen/git/strawmang/static/css/_components.scss */
-    .strawman .chat > header > div {
-      display: -webkit-box;
-      display: -moz-box;
-      display: box;
-      display: -webkit-flex;
-      display: -moz-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -moz-box-pack: justify;
-      box-pack: justify;
-      -webkit-justify-content: space-between;
-      -moz-justify-content: space-between;
-      -ms-justify-content: space-between;
-      -o-justify-content: space-between;
-      justify-content: space-between;
-      -ms-flex-pack: justify; }
-    /* line 34, /Users/imogen/git/strawmang/static/css/_components.scss */
-    .strawman .chat > header > progress {
-      width: 100%; }
-    /* line 38, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 26, /Users/imogen/git/strawmang/static/css/_components.scss */
+    .strawman .chat > header {
+      background-color: #fafafa; }
+      /* line 28, /Users/imogen/git/strawmang/static/css/_components.scss */
+      .strawman .chat > header > div {
+        display: -webkit-box;
+        display: -moz-box;
+        display: box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -moz-box-pack: justify;
+        box-pack: justify;
+        -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+        -ms-justify-content: space-between;
+        -o-justify-content: space-between;
+        justify-content: space-between;
+        -ms-flex-pack: justify; }
+      /* line 35, /Users/imogen/git/strawmang/static/css/_components.scss */
+      .strawman .chat > header > progress {
+        width: 100%; }
+    /* line 39, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > ul {
       -webkit-box-flex: 1;
       -moz-box-flex: 1;
@@ -580,50 +582,54 @@ html {
       flex: 1;
       padding-left: 0;
       list-style-type: none; }
-      /* line 45, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 46, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > ul > li > span::after {
         content: "\00a0"; }
     /* line 52, /Users/imogen/git/strawmang/static/css/_components.scss */
-    .strawman .chat > footer > div {
-      display: -webkit-box;
-      display: -moz-box;
-      display: box;
-      display: -webkit-flex;
-      display: -moz-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -moz-box-pack: justify;
-      box-pack: justify;
-      -webkit-justify-content: space-between;
-      -moz-justify-content: space-between;
-      -ms-justify-content: space-between;
-      -o-justify-content: space-between;
-      justify-content: space-between;
-      -ms-flex-pack: justify;
-      -webkit-box-align: center;
-      -moz-box-align: center;
-      box-align: center;
-      -webkit-align-items: center;
-      -moz-align-items: center;
-      -ms-align-items: center;
-      -o-align-items: center;
-      align-items: center;
-      -ms-flex-align: center; }
-      /* line 56, /Users/imogen/git/strawmang/static/css/_components.scss */
-      .strawman .chat > footer > div > input {
-        -webkit-box-flex: 1;
-        -moz-box-flex: 1;
-        box-flex: 1;
-        -webkit-flex: 1;
-        -moz-flex: 1;
-        -ms-flex: 1;
-        flex: 1; }
-    /* line 60, /Users/imogen/git/strawmang/static/css/_components.scss */
-    .strawman .chat > footer > progress {
-      width: 100%; }
-  /* line 65, /Users/imogen/git/strawmang/static/css/_components.scss */
+    .strawman .chat > footer {
+      background-color: #fafafa; }
+      /* line 54, /Users/imogen/git/strawmang/static/css/_components.scss */
+      .strawman .chat > footer > div {
+        display: -webkit-box;
+        display: -moz-box;
+        display: box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -moz-box-pack: justify;
+        box-pack: justify;
+        -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+        -ms-justify-content: space-between;
+        -o-justify-content: space-between;
+        justify-content: space-between;
+        -ms-flex-pack: justify;
+        -webkit-box-align: center;
+        -moz-box-align: center;
+        box-align: center;
+        -webkit-align-items: center;
+        -moz-align-items: center;
+        -ms-align-items: center;
+        -o-align-items: center;
+        align-items: center;
+        -ms-flex-align: center; }
+        /* line 58, /Users/imogen/git/strawmang/static/css/_components.scss */
+        .strawman .chat > footer > div > input {
+          -webkit-box-flex: 1;
+          -moz-box-flex: 1;
+          box-flex: 1;
+          -webkit-flex: 1;
+          -moz-flex: 1;
+          -ms-flex: 1;
+          flex: 1; }
+      /* line 62, /Users/imogen/git/strawmang/static/css/_components.scss */
+      .strawman .chat > footer > progress {
+        width: 100%; }
+  /* line 67, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .submit {
+    background-color: #fafafa;
     display: -webkit-box;
     display: -moz-box;
     display: box;
@@ -659,11 +665,18 @@ html {
     -o-align-items: flex-start;
     align-items: flex-start;
     -ms-flex-align: start; }
-    /* line 70, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 73, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .submit > div {
       max-width: 100%; }
-      /* line 72, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 75, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .submit > div > input {
         width: 100%;
         border: none;
         padding: 0; }
+    /* line 81, /Users/imogen/git/strawmang/static/css/_components.scss */
+    .strawman .submit > span {
+      color: rgba(0, 0, 0, 0.54); }
+  /* line 85, /Users/imogen/git/strawmang/static/css/_components.scss */
+  .strawman input {
+    background-color: transparent;
+    border-style: none; }
