--- a/static/css/_components.scss
+++ b/static/css/_components.scss
@@ -77,11 +77,13 @@ html {
 		@include align-items(flex-start);
 		> div {
 			max-width: 100%;
+			position: relative;
 			> input {
 				@extend .h0;
-				width: 100%;
+				width: auto;
+				box-sizing: border-box;
 				border: none;
-				padding: 0;
+				padding: 0 16px;
 			}
 		}
 		> span {
