--- a/static/css/main.css
+++ b/static/css/main.css
@@ -540,16 +540,19 @@ html {
       flex-basis: 0;
       -ms-flex-preferred-size: 0; }
       /* line 33, /Users/imogen/git/strawmang/static/css/_components.scss */
+      .strawman .columns > section:empty {
+        background-color: #fafafa; }
+      /* line 36, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .columns > section > header {
         height: 64px;
         border-top-left-radius: 2px;
         border-top-right-radius: 2px; }
-      /* line 38, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 41, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .columns > section > footer {
         height: 64px;
         border-bottom-left-radius: 2px;
         border-bottom-right-radius: 2px; }
-  /* line 45, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 48, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .chat {
     display: -webkit-box;
     display: -moz-box;
@@ -568,11 +571,11 @@ html {
     -moz-flex-direction: column;
     flex-direction: column;
     -ms-flex-direction: column; }
-    /* line 48, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 51, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > header {
       background-color: #fafafa;
       position: relative; }
-      /* line 51, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 54, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > header > div {
         height: 100%;
         display: -webkit-box;
@@ -600,15 +603,15 @@ html {
         -o-align-items: center;
         align-items: center;
         -ms-flex-align: center; }
-        /* line 56, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 59, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > header > div > span {
           margin: 0 16px; }
-      /* line 61, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 64, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > header > progress {
         width: 100%;
         position: absolute;
         bottom: 0; }
-    /* line 67, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 70, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > ul {
       padding: 4px 16px;
       margin: 0;
@@ -620,17 +623,17 @@ html {
       -moz-flex: 1;
       -ms-flex: 1;
       flex: 1; }
-      /* line 72, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 75, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > ul > li {
         margin: 8px 0; }
-        /* line 76, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 79, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > ul > li > span::after {
           content: "\00a0"; }
-    /* line 82, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 85, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .chat > footer {
       background-color: #fafafa;
       position: relative; }
-      /* line 85, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 88, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > footer > div {
         height: 100%;
         padding: 0 8px;
@@ -659,7 +662,7 @@ html {
         -o-align-items: center;
         align-items: center;
         -ms-flex-align: center; }
-        /* line 91, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 94, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > footer > div > input {
           -webkit-box-flex: 1;
           -moz-box-flex: 1;
@@ -669,21 +672,21 @@ html {
           -ms-flex: 1;
           flex: 1;
           margin: 0 8px; }
-        /* line 96, /Users/imogen/git/strawmang/static/css/_components.scss */
+        /* line 99, /Users/imogen/git/strawmang/static/css/_components.scss */
         .strawman .chat > footer > div > button {
           margin: 0 8px; }
-          /* line 98, /Users/imogen/git/strawmang/static/css/_components.scss */
+          /* line 101, /Users/imogen/git/strawmang/static/css/_components.scss */
           .strawman .chat > footer > div > button:first-child {
             margin-left: 4px; }
-          /* line 101, /Users/imogen/git/strawmang/static/css/_components.scss */
+          /* line 104, /Users/imogen/git/strawmang/static/css/_components.scss */
           .strawman .chat > footer > div > button:last-child {
             margin-right: 4px; }
-      /* line 106, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 109, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .chat > footer > progress {
         width: 100%;
         position: absolute;
         bottom: 0; }
-  /* line 113, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 116, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman .submit {
     padding: 0 16px;
     background-color: #fafafa;
@@ -722,25 +725,25 @@ html {
     -o-align-items: flex-start;
     align-items: flex-start;
     -ms-flex-align: start; }
-    /* line 120, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 123, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .submit > div {
       max-width: 100%;
       position: relative; }
-      /* line 123, /Users/imogen/git/strawmang/static/css/_components.scss */
+      /* line 126, /Users/imogen/git/strawmang/static/css/_components.scss */
       .strawman .submit > div > input {
         width: 100%;
         box-sizing: border-box;
         border: none; }
-    /* line 130, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 133, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman .submit > span {
       color: rgba(0, 0, 0, 0.54); }
-  /* line 138, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 141, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman input:focus,
   .strawman select:focus,
   .strawman textarea:focus,
   .strawman button:focus {
     outline: none; }
-  /* line 141, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 144, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman input {
     background-color: transparent;
     border-style: none; }
@@ -760,7 +763,7 @@ html {
     .strawman input:-ms-input-placeholder {
       color: rgba(0, 0, 0, 0.26);
       line-height: initial; }
-  /* line 149, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 152, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman button {
     background: none;
     border: none;
@@ -768,76 +771,76 @@ html {
     line-height: 0;
     color: rgba(0, 0, 0, 0.54);
     padding: 0; }
-    /* line 156, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 159, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman button:hover {
       color: rgba(0, 0, 0, 0.87); }
-    /* line 159, /Users/imogen/git/strawmang/static/css/_components.scss */
+    /* line 162, /Users/imogen/git/strawmang/static/css/_components.scss */
     .strawman button:active {
       font-size: 23px;
       line-height: 23px;
       position: relative;
       margin: .5px; }
-  /* line 166, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 169, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-webkit-progress-inner-element {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none; }
-  /* line 166, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 169, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-moz-progress-inner-element {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none; }
-  /* line 166, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 169, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-ms-progress-inner-element {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none; }
-  /* line 166, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 169, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-o-progress-inner-element {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none; }
-  /* line 171, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 174, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-webkit-progress-bar {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
-    background: rgba(0, 0, 0, 0.54); }
-  /* line 171, /Users/imogen/git/strawmang/static/css/_components.scss */
+    background-color: rgba(0, 0, 0, 0.54); }
+  /* line 174, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-moz-progress-bar {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
-    background: rgba(0, 0, 0, 0.54); }
-  /* line 171, /Users/imogen/git/strawmang/static/css/_components.scss */
+    background-color: rgba(0, 0, 0, 0.54); }
+  /* line 174, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-ms-progress-bar {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
-    background: rgba(0, 0, 0, 0.54); }
-  /* line 171, /Users/imogen/git/strawmang/static/css/_components.scss */
+    background-color: rgba(0, 0, 0, 0.54); }
+  /* line 174, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-o-progress-bar {
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
-    background: rgba(0, 0, 0, 0.54); }
-  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
+    background-color: rgba(0, 0, 0, 0.54); }
+  /* line 180, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-webkit-progress-value {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -845,7 +848,7 @@ html {
     -o-appearance: none;
     appearance: none;
     background-color: #7699d4; }
-  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 180, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-moz-progress-value {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -853,7 +856,7 @@ html {
     -o-appearance: none;
     appearance: none;
     background-color: #7699d4; }
-  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 180, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-ms-progress-value {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -861,7 +864,7 @@ html {
     -o-appearance: none;
     appearance: none;
     background-color: #7699d4; }
-  /* line 177, /Users/imogen/git/strawmang/static/css/_components.scss */
+  /* line 180, /Users/imogen/git/strawmang/static/css/_components.scss */
   .strawman progress::-o-progress-value {
     -webkit-appearance: none;
     -moz-appearance: none;
